# StockPrediction-CCDS

./: README.md
stock-prediction-ccds/: .gitignore  LICENSE.md  LICENSE.txt  Makefile  README.md  datapipeline.md  pyproject.toml  requirements.txt
stock-prediction-ccds/docs/: mkdocs.yml
stock-prediction-ccds/docs/docs/: index.md
stock-prediction-ccds/stock_prediction/: __init__.py  config.py  dataset.py  features.py  fetch_metrics.py  plots.py
stock-prediction-ccds/stock_prediction/analysis/: financial_analysis.py
stock-prediction-ccds/stock_prediction/modeling/: aggregate_rl_results.py  predict.py  pretrain_lstm.py  train.py  train_lstm.py  train_rl.py  utils.py  visualize_rl.py
stock-prediction-ccds/stock_prediction/modeling/envs/: stock_trading_env.py
