[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stock_prediction"
version = "0.0.1"
description = "The overall goal of this project is to develop a data-driven approach to predict short-to-medium-term stock price movements and optimize portfolio allocation for a set of technology stocks"
authors = [
  { name = "Kofi Boateng" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["stock_prediction"]
include = ["pyproject.toml", "stock_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["stock_prediction"]
force-sort-within-sections = true

